@@ -1,3 +1,9 @@
+2004-04-29  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* tkchat.tcl: Support 'tile' themeing now. There are a couple of
+	places (font and color dialogs) that have compatability
+	workarounds that might be removed in the future. Requires tile0.4+
+
 2003-02-09  Pascal Scheffers  <pascal@scheffers.net>
 	* tkchat.tcl: Updated the way messages from ircbridge and ijchain
 	are handled. The new code path rewrites the messages before the
